Add macOS compatibility docs and CSV export UX.
Gradle chmod reminder, RuneLite profile path comments, dev client
Javadoc for Mac, JFileChooser defaults to user home, expanded README.

Co-authored-by: Cursor <cursoragent@cursor.com>